# pubchem-topology

./: .gitignore  Cargo.toml  README.md  env.example
.github/workflows/: ci.yml  pages.yml
apps/topology-web/: Cargo.toml  Dioxus.toml  build.rs
apps/topology-web/assets/: main.css
apps/topology-web/src/: main.rs
apps/topology-worker/: Cargo.toml
apps/topology-worker/src/: lib.rs
crates/topology-classifier/: Cargo.toml
crates/topology-classifier/src/: graphlets.rs  lib.rs
src/: infographic.rs  lib.rs  main.rs
tests/: full_pipeline.rs  review_svg.rs  zenodo_sandbox.rs
tests/fixtures/: sample_pubchem.tsv
