[package]
name = "topology-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
publish = false

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
expect_used = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
dioxus = { version = "0.7.5", features = ["web"] }
serde_json = "1.0.145"
topology-classifier = { path = "../../crates/topology-classifier" }
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["Clipboard", "Navigator", "Window"] }
