[package]
name = "topology-web-worker"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
expect_used = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.82"
serde-wasm-bindgen = "0.6.5"
topology-classifier = { path = "../../crates/topology-classifier" }
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["DedicatedWorkerGlobalScope", "MessageEvent"] }
