[package]
name = "topology-classifier"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Shared SMILES topology classification for batch and web tooling"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
expect_used = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", branch = "main", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", rev = "962b6082a02a970190ac29bafb5fa6a30210dbfc" }
thiserror = "2.0.18"
